--- a/podcast.html
+++ b/podcast.html
@@ -39,7 +39,6 @@
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">AboutMe</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a href="blog.html">Blogs</a></li>
@@ -47,7 +46,7 @@
                                 </ul>
                             </div>
                             <div class="navbar-button flex">
-                                <form action="">
+                                <form action="contact.html">
                                     <div class="form-btn">
                                         <button class="btn btn-yellow nav-btn flex">
                                             <img src="assets/img/simple-icons_buymeacoffee.png" alt="" class="animation">
@@ -188,7 +187,7 @@
                     <div class="span-2"></div>
                 </div>
                 <div class="episode_content grid">
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -199,7 +198,7 @@
                             <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up" data-aos-delay="200">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -210,7 +209,7 @@
                             <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up" data-aos-delay="300">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -221,7 +220,7 @@
                             <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -232,7 +231,7 @@
                             <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up" data-aos-delay="200">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -243,7 +242,7 @@
                             <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
-                    <div class="single_episode">
+                    <div class="single_episode" data-aos="fade-up" data-aos-delay="300">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
                             <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
