--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,6 @@
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">AboutMe</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a class="active" href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a href="blog.html">Blogs</a></li>
@@ -47,7 +46,7 @@
                                 </ul>
                             </div>
                             <div class="navbar-button flex">
-                                <form action="">
+                                <form action="contact.html">
                                     <div class="form-btn">
                                         <button class="btn btn-yellow nav-btn flex">
                                             <img src="assets/img/simple-icons_buymeacoffee.png" alt="" class="animation">
