--- a/single_podcast.html
+++ b/single_podcast.html
@@ -39,7 +39,6 @@
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">AboutMe</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a href="blog.html">Blogs</a></li>
@@ -47,7 +46,7 @@
                                 </ul>
                             </div>
                             <div class="navbar-button flex">
-                                <form action="">
+                                <form action="contact.html">
                                     <div class="form-btn">
                                         <button class="btn btn-yellow nav-btn flex">
                                             <img src="assets/img/simple-icons_buymeacoffee.png" alt="" class="animation">
@@ -74,11 +73,11 @@
         <section class="signle_podcast-hero">
             <div class="container">
                 <div class="single_hero-content grid">
-                    <div class="podcast_hero-img">
+                    <div class="podcast_hero-img" data-aos="fade-right">
                         <img src="assets/img/podcast/Image (1).png" class="img-fluid" alt="">
                         <a href=""><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                     </div>
-                    <div class="podcast_hero-text">
+                    <div class="podcast_hero-text" data-aos="fade-left">
                         <a href="">business</a>
                         <h2>Ep 2: Getting the first 100 customers for your business</h2>
                         <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon</p>
@@ -181,7 +180,7 @@
                         <div class="span-2"></div>
                     </div>
                     <div class="episode_content grid">
-                        <div class="single_episode">
+                        <div class="single_episode" data-aos="fade-up">
                             <div class="ep_img">
                                 <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
                                 <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -192,7 +191,7 @@
                                 <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                             </div>
                         </div>
-                        <div class="single_episode">
+                        <div class="single_episode" data-aos="fade-up" data-aos-delay="200">
                             <div class="ep_img">
                                 <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
                                 <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
@@ -203,7 +202,7 @@
                                 <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                             </div>
                         </div>
-                        <div class="single_episode">
+                        <div class="single_episode" data-aos="fade-up" data-aos-delay="300">
                             <div class="ep_img">
                                 <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
                                 <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
