--- a/contact.html
+++ b/contact.html
@@ -138,6 +138,10 @@
         </div>
     </footer>
     
+
+    <!-- fixed button on bottom -->
+
+
     <button class="btn fixed_btn">
         <i class='bx bx-up-arrow-alt'></i>
     </button>
