--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
         </div>
     </footer>
 
+    <!-- fixed button on bottom -->
+
     <button class="btn fixed_btn">
         <i class='bx bx-up-arrow-alt'></i>
     </button>
