--- a/projects.html
+++ b/projects.html
@@ -70,74 +70,74 @@
 
     <!--==================================== PROJECT SECTION STRUCTURE LAYOUT ================================= -->
 
-    <section class="project">
-        <div class="container">
-            <h1 class="section_title">Projects </h1>
-            <div class="project_content grid">
-                <div class="single_project" data-aos="fade-right">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+        <section class="project">
+            <div class="container">
+                <h1 class="section_title">Projects </h1>
+                <div class="project_content grid">
+                    <div class="single_project" data-aos="fade-right">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
                     </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                    <div class="single_project" data-aos="fade-left">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
+                    </div>
+                    <div class="single_project" data-aos="fade-right">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
+                    </div>
+                    <div class="single_project" data-aos="fade-left">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
+                    </div>
+                    <div class="single_project" data-aos="fade-right">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
+                    </div>
+                    <div class="single_project" data-aos="fade-left">
+                        <div class="project_img">
+                            <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
+                        </div>
+                        <div class="project_details">
+                            <a href="#">June 14th 2022</a>
+                            <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                        </div>
                     </div>
                 </div>
-                <div class="single_project" data-aos="fade-left">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
-                    </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
-                    </div>
-                </div>
-                <div class="single_project" data-aos="fade-right">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
-                    </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
-                    </div>
-                </div>
-                <div class="single_project" data-aos="fade-left">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
-                    </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
-                    </div>
-                </div>
-                <div class="single_project" data-aos="fade-right">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
-                    </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
-                    </div>
-                </div>
-                <div class="single_project" data-aos="fade-left">
-                    <div class="project_img">
-                        <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
-                    </div>
-                    <div class="project_details">
-                        <a href="#">June 14th 2022</a>
-                        <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
-                    </div>
-                </div>
+                <ul class="pagination flex" style="justify-content: flex-start;column-gap: 20px;">
+                    <li><a class="active" href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li class="disabled">...</li>
+                    <li><a href="#">12</a></li>
+                    <li><a href="#">next</a></li>
+                </ul>
             </div>
-            <ul class="pagination flex" style="justify-content: flex-start;column-gap: 20px;">
-                <li><a class="active" href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li class="disabled">...</li>
-                <li><a href="#">12</a></li>
-                <li><a href="#">next</a></li>
-            </ul>
-        </div>
-    </section>
+        </section>
 
     </main>
 
@@ -182,9 +182,13 @@
         </div>
     </footer>
     
+
+    <!-- fixed button on bottom -->
+
     <button class="btn fixed_btn">
         <i class='bx bx-up-arrow-alt'></i>
     </button>
+
     <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
     
     <script src="assets/vendor/aos/aos.js"></script>
