--- a/single_podcast.html
+++ b/single_podcast.html
@@ -261,9 +261,11 @@
     </div>
 </footer>
 
-<button class="btn fixed_btn">
-    <i class='bx bx-up-arrow-alt'></i>
-</button>
+    <!-- fixed button on bottom -->
+
+    <button class="btn fixed_btn">
+        <i class='bx bx-up-arrow-alt'></i>
+    </button>
 <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
 <script src="assets/vendor/aos/aos.js"></script>
