--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">AboutMe</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a class="active" href="#">Blogs</a></li>
@@ -269,10 +270,11 @@
     </footer>
 
 
-<!-- fixed button on bottom -->
-<button class="btn fixed_btn">
+    <!-- fixed button on bottom -->
+
+    <button class="btn fixed_btn">
     <i class='bx bx-up-arrow-alt'></i>
-</button>
+    </button>
 
     <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
