--- a/post.html
+++ b/post.html
@@ -22,6 +22,7 @@
 <body>
     
     <!--==================================== NAVBAR STRUCTURE LAYOUT ================================= -->
+        
         <header class="header">
             <nav class="navbar">
                 <div class="container">
@@ -230,9 +231,12 @@
         </div>
     </footer>
 
+    <!-- fixed button on bottom -->
+
     <button class="btn fixed_btn">
         <i class='bx bx-up-arrow-alt'></i>
     </button>
+
     <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
     <script src="assets/vendor/aos/aos.js"></script>
