--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samar.io</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
 
@@ -80,13 +81,18 @@
                             A Problem solver
                             and a Storyteller</h1>
                             <div class="btn-group flex">
-                                <button class="btn hero_btn btn-yellow flex">
-                                    <span style="margin-right: 6px;">About me</span>
-                                    <img src="assets/img/chevron-right-square.svg" alt="">
-                                </button>
-                                <button class="btn hero_btn btn_bdr ">
-                                    Contact Me
-                                </button>
+                                <form action="about.html">
+                                    <button class="btn hero_btn btn-yellow flex">
+                                        <span style="margin-right: 6px;">About me</span>
+                                        <img src="assets/img/chevron-right-square.svg" alt="">
+                                    </button>
+                                </form>
+                                <form action="contact.html">
+                                    <button class="btn hero_btn btn_bdr ">
+                                        Contact Me
+                                    </button>
+                                </form>
+                                
                             </div>
                     </div>
                     <div class="hero_img-contents" data-aos="fade-left" data-aos-delay="300">
