--- a/podcast.html
+++ b/podcast.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samar.io</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
 
@@ -85,13 +86,17 @@
                     <h3 >An Innovative Podcast  for Indian Students</h3>
                     <p>shing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface .</p>
                         <div class="btn-group flex">
-                            <button class="btn hero_btn btn-yellow flex">
-                                <span style="margin-right: 6px;">About me</span>
-                                <img src="assets/img/chevron-right-square.svg" alt="">
-                            </button>
-                            <button class="btn hero_btn btn_bdr ">
-                                Contact Me
-                            </button>
+                            <form action="about.html">
+                                <button class="btn hero_btn btn-yellow flex">
+                                    <span style="margin-right: 6px;">About me</span>
+                                    <img src="assets/img/chevron-right-square.svg" alt="">
+                                </button>
+                            </form>
+                            <form action="contact.html">
+                                <button class="btn hero_btn btn_bdr ">
+                                    Contact Me
+                                </button>
+                            </form>
                         </div>
                 </div>
 
