--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samar.io</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
 
@@ -42,7 +43,7 @@
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a href="blog.html">Blogs</a></li>
-                                    <li><a class="active" href="podcast.html">Podcast</a></li>
+                                    <li><a href="podcast.html">Podcast</a></li>
                                 </ul>
                             </div>
                             <div class="navbar-button flex">
