--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Samar.io</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
 
     <link rel="stylesheet" href="assets/vendor/aos/aos.css">
@@ -39,7 +39,6 @@
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">AboutMe</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="projects.html">Projects</a></li>
                                     <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a class="active" href="#">Blogs</a></li>
@@ -83,13 +82,17 @@
                         
                         <h1 class="hero_title" style="margin:24px 0;">An Innovative newsletter for Indian Students</h1>
                             <div class="btn-group flex">
-                                <button class="btn hero_btn btn-yellow flex">
-                                    <span style="margin-right: 6px;">About me</span>
-                                    <img src="assets/img/chevron-right-square.svg" alt="">
-                                </button>
-                                <button class="btn hero_btn btn_bdr ">
-                                    Contact Me
-                                </button>
+                                <form action="about.html">
+                                    <button class="btn hero_btn btn-yellow flex">
+                                        <span style="margin-right: 6px;">About me</span>
+                                        <img src="assets/img/chevron-right-square.svg" alt="">
+                                    </button>
+                                </form>
+                                <form action="contact.html">
+                                    <button class="btn hero_btn btn_bdr ">
+                                        Contact Me
+                                    </button>
+                                </form>
                             </div>
                     </div>
                     <div class="hero_img-contents" data-aos="fade-left" data-aos-delay="300">
