--- a/post.html
+++ b/post.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samar.io</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon-32x32.png">
+
 
     <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
 
